fix: footer and banner responsiveness, visual spacing changes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -179,3 +179,35 @@ body.blur {
 #languageSelect:hover {
     cursor: pointer;
 }
+
+#footer .inner .copyright {
+    margin: 0 0 2em 0;
+}
+
+#footer .inner {
+    padding: 3em 0 1em 0;
+}
+
+@media screen and (max-width: 980px) {
+    #footer .inner {
+        padding: 3em 3em 1em 3em;
+        display: block;
+        width: 100%;
+    }
+}
+
+#banner {
+    padding: 6em 0 3em 0;
+}
+
+#header h1 a {
+    border: 0;
+    text-decoration: dotted;
+}
+
+@media screen and (max-width: 980px) {
+    #banner .inner {
+        width: 100%;
+        padding: 0 2.5em 2em 2.5em;
+    }
+}
